tests/fsharp/typecheck/sigs/neg56.bsl

neg56.fs(9,39,9,44): typecheck error FS3068: The function or member 'A' is used in a way that requires further type annotations at its definition to ensure consistency of inferred types. The inferred signature is 'member C.A: unit -> 'T'.

neg56.fs(12,36,12,41): typecheck error FS3068: The function or member 'A' is used in a way that requires further type annotations at its definition to ensure consistency of inferred types. The inferred signature is 'member C.A: unit -> 'T'.

neg56.fs(15,39,15,44): typecheck error FS3068: The function or member 'A' is used in a way that requires further type annotations at its definition to ensure consistency of inferred types. The inferred signature is 'member C.A: unit -> 'T'.

neg56.fs(26,30,26,43): typecheck error FS3068: The function or member 'A' is used in a way that requires further type annotations at its definition to ensure consistency of inferred types. The inferred signature is 'static member C.A: unit -> 'T'.

neg56.fs(27,30,27,40): typecheck error FS3068: The function or member 'A' is used in a way that requires further type annotations at its definition to ensure consistency of inferred types. The inferred signature is 'static member C.A: unit -> 'T'.
